Cambios en application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=Plantilla
+#Cambia el puerto al que gustes
+server.port=8080
 
 # Conexión a PostgreSQL (Docker)
 spring.datasource.url=jdbc:postgresql://localhost:5555/postgres
@@ -13,4 +15,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #Clave de jwt, genera la tuya y ponla aqui
-jwt.secret=
+jwt.secret=v8EjvL9N1aI6N8oMQK1Z3EzZlO6qFdGkzkT6DxTbmYo=
