--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #Clave de jwt, genera la tuya y ponla aqui
-jwt.secret=v8EjvL9N1aI6N8oMQK1Z3EzZlO6qFdGkzkT6DxTbmYo=
+jwt.secret=
